[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/enemies/TemplateAI.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 156.918

[node name="TemplateAI" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Floor_Ray" type="RayCast2D" parent="."]

[node name="Up_Ray" type="RayCast2D" parent="."]

[node name="Side_Ray_Left" type="RayCast2D" parent="."]

[node name="Side_Ray_Right" type="RayCast2D" parent="."]

[node name="Corner_Ray_Left" type="RayCast2D" parent="."]

[node name="Corner_Ray_Right" type="RayCast2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Detection2D" type="Area2D" parent="."]
gravity = 0.0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection2D"]
shape = SubResource( 1 )

